# class_tennis

./: .coverage  .gitignore  ADR.md  PDR.md  README.md  project_structure.md  pyproject.toml  sequencias_recorrencias.tex  tennis_yearly_eda.py
notebooks/: DL.ipynb  EDA.ipynb  ML.ipynb
src/: __main__.py  pipeline.py
src/cache/: cache_interface.py
src/config/: dataset_type.py  load_type.py  pipeline_config.py
src/data/: test_data_classes.py
src/data/ingestion/: __init__.py  data_loader.py  data_parser.py
src/generate_data/: generate_test_data.py
src/loader/: __init__.py  _base_data_loader.py  csv_data_loader.py  parquet_data_loader.py
src/source_parser/: __init__.py  _base_parser.py  _source_parser.py  tennis.py  tennis_match_parser.py
src/transformers/: log_data.py  transformers.py
tests/: test_data_classes.py  test_pipeline.py
tests/test_config/: test_pipeline_config.py
tests/test_loader/: test_data_loader.py
tests/test_parser/: test_parser.py
tests/utils/: generate_test_data.py
