[project]
name = "big-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "glicko2>=2.1.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "trueskill>=0.4.5",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]
